# automatom

./: .gitignore  README.md
app/: CONTRIBUTING.md  engine.py  main.py  pyproject.toml  schemas.py
app/services/: __init__.py  records.py
